--- a/class/Module/News/config.yml
+++ b/class/Module/News/config.yml
@@ -6,3 +6,9 @@ services:
         arguments: [ @tpl ]
         tags:
             - { name: event.subscriber }
+
+    news.sitemap.subscriber:
+        class: Module\News\Subscriber\SiteMapSubscriber
+        arguments: [ @mapper.news.news ]
+        tags:
+            - { name: event.subscriber }
