--- a/app/config.yml
+++ b/app/config.yml
@@ -26,7 +26,6 @@ jqgrid: ~
 assetic:
     debug: %debug%
     output: "%root%/static"
-    bootstrap: true         # @deprecated
     filters:
         jsmin: {}
         cssmin: {}
@@ -40,6 +39,13 @@ database:
     debug: "%debug%"
     options:
         1002: "SET NAMES utf8"
+
+doctrine: ~
+#    cache:
+#        metadata: { type: array }
+#        query: { type: file, path: "%root%/runtime/cache" }
+#        result: { type: apc }
+
 
 template:
     theme: %template_theme%
