--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,10 @@
         "phpunit/php-file-iterator": "1.3.*"
     },
     "require": {
-        "php": ">=5.4.1",
+        "php": ">=5.4",
         "symfony/symfony": "2.4.*",
+        "doctrine/orm": "2.4.*",
+        "doctrine/migrations": "1.0.*@dev",
         "smarty/smarty": "~3.1",
         "incenteev/composer-parameter-handler": "~2.0",
         "monolog/monolog": "~1.6",
@@ -87,7 +89,7 @@
     "minimum-stability": "stable",
     "extra": {
         "branch-alias": {
-            "dev-master": "0.6-dev"
+            "dev-master": "0.7-dev"
         },
         "incenteev-parameters": {
             "file": "app/parameters.yml",
