--- a/class/Module/Elfinder/config.yml
+++ b/class/Module/Elfinder/config.yml
@@ -1,6 +1,6 @@
 services:
     elfinder.static.listener:
         class: Module\Elfinder\Listener\StaticListener
-        arguments: ["@assetic_service", "%root%"]
+        arguments: ["@asset.service", "%root%"]
         tags:
             - { name: event.listener, event: static.install , method: installElFinder }
