--- a/class/Module/JqGrid/config.yml
+++ b/class/Module/JqGrid/config.yml
@@ -1,6 +1,6 @@
 services:
     jqgrid.static.listener:
         class: Module\JqGrid\Listener\StaticListener
-        arguments: ["@assetic_service", "%root%"]
+        arguments: ["@asset.service", "%root%"]
         tags:
             - { name: event.listener, event: static.install , method: installJqGrid }
