--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,14 @@
         "symfony/symfony": "2.4.*",
         "doctrine/orm": "2.4.*",
         "doctrine/migrations": "1.0.*@dev",
-        "smarty/smarty": "~3.1",
+        "smarty/smarty": "3.1.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "monolog/monolog": "~1.6",
         "swiftmailer/swiftmailer": "~5.0",
         "kriswallsmith/assetic": "~1.1",
+        "components/normalize.css": "2.*",
+        "components/jquery": "~1.11",
+        "components/jqueryui": "~1.10",
         "ckeditor/ckeditor_full": "4.3.*",
         "helios-ag/fm-elfinder": "v2.0",
         "tonytomov/jqGrid" : "4.4",
@@ -85,6 +88,9 @@
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sfcms\\ComposerHandler::execute"
         ]
+    },
+    "config": {
+        "component-dir": "components"
     },
     "minimum-stability": "stable",
     "extra": {
