--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,13 @@
         "phpunit/phpunit": "3.7.*",
         "phpunit/phpunit-mock-objects": "1.2.*",
         "phpunit/php-code-coverage": "1.2.*",
-        "phpunit/php-file-iterator": "1.3.*"
+        "phpunit/php-file-iterator": "1.3.*",
+        "doctrine/migrations": "1.0.*@dev"
     },
     "require": {
         "php": ">=5.4",
         "symfony/symfony": "2.4.*",
         "doctrine/orm": "2.4.*",
-        "doctrine/migrations": "1.0.*@dev",
         "smarty/smarty": "3.1.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "monolog/monolog": "~1.6",
