--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "include-path": ["./", "class/"],
     "require-dev": {
+        "codeception/codeception": "~1.8",
         "behat/mink": "~1.5",
         "behat/mink-browserkit-driver": "~1.1",
         "behat/mink-goutte-driver": "~1.0",
