--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ matrix:
 
 script: phpunit -c test/phpunit.xml
 
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1366x768x16"
+
 before_script:
   - sh -c "mysql -e 'create database IF NOT EXISTS siteforever_test;'"
   - curl -sS https://getcomposer.org/installer | php
