--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: php
 php:
+  - 5.6
   - 5.5
   - 5.4
   - hhvm
@@ -8,7 +9,7 @@ matrix:
   allow_failures:
     - php: hhvm
 
-script: phpunit -c test/phpunit.xml
+script: phpunit -c test/phpunit-travis.xml
 
 before_install:
   - "export DISPLAY=:99.0"
