Update dashboards for news and pages. Remove access by class name from data.manager

--- a/class/Module/Page/config.yml
+++ b/class/Module/Page/config.yml
@@ -3,7 +3,7 @@ parameters:
 services:
     page.dashbord.subscriber:
         class: Module\Page\Subscriber\DashboardSubscriber
-        arguments: [ @tpl ]
+        arguments: [ @tpl, @data.manager ]
         tags:
             - { name: event.subscriber }
 
