--- a/class/Module/News/config.yml
+++ b/class/Module/News/config.yml
@@ -3,7 +3,7 @@ parameters:
 services:
     news.dashbord.subscriber:
         class: Module\News\Subscriber\DashboardSubscriber
-        arguments: [ @tpl ]
+        arguments: [ @tpl, @data.manager ]
         tags:
             - { name: event.subscriber }
 
