fix bin files location

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-/api.zip
 /app/parameters.yml
-!/bin/console
-/bin/
-/components
+/bin/*
+!bin/console
+!bin/pngout
+!bin/yuicompressor-2.4.7.jar
 /build/release
-/_build/
-/runtime/
+/runtime/*
 /test/codeCoverage
 /files/.quarantine
 /files/.tmb
-/thumbs/
+/thumbs/*
 /vendor/*
-/static/
+/static/*
 /composer.phar
 /composer.lock
