--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "behat/behat": "~3.0",
         "behat/mink-extension": "~2.0",
         "behat/mink": "~1.5",
-        "behat/mink-goutte-driver": "~1.0",
+        "behat/mink-browserkit-driver": "1.1.*",
+        "behat/mink-goutte-driver": "1.0.*",
         "behat/mink-selenium2-driver": "~1.1",
         "behat/mink-zombie-driver": "~1.1",
         "phpunit/php-invoker": "1.1.*",
@@ -64,10 +65,9 @@
             "package":{
                 "name":"tonytomov/jqGrid",
                 "version":"4.4",
-                "source":{
-                    "type":"git",
-                    "url":"https://github.com/tonytomov/jqGrid",
-                    "reference":"tags/v4.4.5"
+                "dist": {
+                    "url": "https://github.com/tonytomov/jqGrid/archive/v4.4.5.zip",
+                    "type": "zip"
                 }
             }
         },
@@ -77,7 +77,7 @@
                 "name":"Studio-42/elFinder",
                 "version":"2.1",
                 "dist": {
-                    "url": "https://codeload.github.com/Studio-42/elFinder/zip/2.1",
+                    "url": "https://github.com/Studio-42/elFinder/archive/2.1.zip",
                     "type": "zip"
                 }
             }
