--- a/composer.json
+++ b/composer.json
@@ -120,5 +120,5 @@
             "dist-file": "app/parameters.yml.dist"
         }
     },
-    "bin": ["bin/console"]
+    "bin": ["bin/console", "bin/pngout", "bin/yuicompressor-2.4.7.jar"]
 }
