independent system dir names

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 /app/parameters.yml
 /app/bootstrap.php.cache
-/bin/*
+/bin
 !bin/console
 !bin/pngout
 !bin/yuicompressor-*.jar
 /build/release
-/runtime/*
+/var
 /test/codeCoverage
-/files/*
-/thumbs/*
-/vendor/*
-/static/*
+/files
+/thumbs
+/vendor
+/static
 /composer.phar
 /composer.lock
