--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name" : "keltanas/site-forever-cms",
+    "name" : "siteforever/site-forever-cms",
     "description": "Simple CMS for PHP and MySQL",
     "keywords": [ "siteforever", "cms", "smarty", "php", "keltanas", "firetroop" ],
     "homepage": "http://siteforever.ru",
@@ -14,8 +14,8 @@
     ],
     "support" : {
         "email" : "keltanas@gmail.com",
-        "source" : "https://github.com/keltanas/SiteForeverCMS",
-        "issues" : "https://github.com/keltanas/SiteForeverCMS/issues",
+        "source" : "https://github.com/siteforever/SiteForeverCMS",
+        "issues" : "https://github.com/siteforever/SiteForeverCMS/issues",
         "wiki" : "http://wiki.siteforever.ru"
     },
     "autoload": {
@@ -42,8 +42,8 @@
         "phpunit/php-file-iterator": "1.3.*"
     },
     "require": {
-        "php": ">=5.4",
-        "symfony/symfony": "2.5.*",
+        "php": ">=5.5",
+        "symfony/symfony": "~2.7",
         "symfony/proxy-manager-bridge": "2.5.*",
         "doctrine/orm": "2.4.*",
         "doctrine/migrations": "1.0.*@dev",
@@ -53,8 +53,8 @@
         "swiftmailer/swiftmailer": "~5.0",
         "kriswallsmith/assetic": "~1.1",
         "twbs/bootstrap": ">=3.2.0,<3.3",
-        "ckeditor/ckeditor_full": "4.3.*",
-        "Studio-42/elFinder": "2.1",
+        "ckeditor/ckeditor": "dev-full/4.3.x",
+        "studio-42/elfinder": "2.*@dev",
         "tonytomov/jqGrid" : "4.4",
         "mrclay/minify": "2.1.*",
         "natxet/cssmin": "3.0.*"
@@ -67,28 +67,6 @@
                 "version":"4.4",
                 "dist": {
                     "url": "https://github.com/tonytomov/jqGrid/archive/v4.4.5.zip",
-                    "type": "zip"
-                }
-            }
-        },
-        {
-            "type":"package",
-            "package":{
-                "name":"Studio-42/elFinder",
-                "version":"2.1",
-                "dist": {
-                    "url": "https://github.com/Studio-42/elFinder/archive/2.1.zip",
-                    "type": "zip"
-                }
-            }
-        },
-        {
-            "type":"package",
-            "package":{
-                "name":"ckeditor/ckeditor_full",
-                "version":"4.3.3",
-                "dist": {
-                    "url": "http://download.cksource.com/CKEditor/CKEditor/CKEditor%204.3.3/ckeditor_4.3.3_full.zip",
                     "type": "zip"
                 }
             }
