--- a/composer.json
+++ b/composer.json
@@ -47,14 +47,14 @@
         "symfony/proxy-manager-bridge": "2.5.*",
         "doctrine/orm": "2.4.*",
         "doctrine/migrations": "1.0.*@dev",
-        "smarty/smarty": "3.1.*",
+        "smarty/smarty": "3.1.19",
         "incenteev/composer-parameter-handler": "~2.0",
         "monolog/monolog": "~1.6",
         "swiftmailer/swiftmailer": "~5.0",
         "kriswallsmith/assetic": "~1.1",
         "twbs/bootstrap": ">=3.2.0,<3.3",
         "ckeditor/ckeditor": "dev-full/4.3.x",
-        "studio-42/elfinder": "2.*@dev",
+        "studio-42/elfinder": "2.x@dev",
         "tonytomov/jqGrid" : "4.4",
         "mrclay/minify": "2.1.*",
         "natxet/cssmin": "3.0.*"
