--- a/class/Module/Translator/config.yml
+++ b/class/Module/Translator/config.yml
@@ -1,4 +1,4 @@
 services:
     i18n:
         class: Sfcms\i18n
-        arguments: ["@translator", "%assetic.output%/i18n", "%debug%"]
+        arguments: ["@translator", "%root%/static/i18n", "%debug%"]
