--- a/class/Siteforever/Bundle/CmsBundle/Resources/config/services.yml
+++ b/class/Siteforever/Bundle/CmsBundle/Resources/config/services.yml
@@ -20,3 +20,10 @@ services:
             - ["setContainer", ["@service_container"]]
         tags:
             - { name: kernel.event_subscriber }
+
+    siteforever_cms.html:
+        class: Sfcms\Html
+
+    siteforever_cms.pager:
+        class: Sfcms\Pager
+        shared: false
