Fix some errors from Page module.

--- a/bower.json
+++ b/bower.json
@@ -20,15 +20,16 @@
     "requirejs": "~2.1",
     "requirejs-text": "~2.0",
     "jqGrid": "tonytomov/jqGrid#~5.0.0",
-    "bootstrap": "3.3.*",
-    "underscore": "1.8.*",
+    "bootstrap": "~3.3",
+    "bootswatch": "~3.3",
+    "underscore": "~1.8",
     "underscore.string": "~3.0",
-    "backbone": "1.2.*",
-    "backbone.marionette": "2.4.*",
+    "backbone": "~1.2",
+    "backbone.marionette": "~2.4",
     "fancybox": "~2.1",
     "jstree": "~3.0",
     "twig.js": "0.8.*",
-    "chosen": "1.4.*",
+    "chosen": "~1.4",
     "backbone.model_binder": "https://github.com/theironcook/Backbone.ModelBinder.git",
     "jquery.maskedinput": "~1.4.1",
     "ckeditor": "#full/4.5.6"
