--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "siteforever",
   "version": "0.7.0",
-  "devDependencies": {
+  "scripts": {
+    "grunt": "node ./node_modules/grunt-cli/bin/grunt"
+  },
+  "dependencies": {
+    "bower": "^1.7.9",
     "grunt": "~0.4.5",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-less": "~0.11.4",
-    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-copy": "~0.8",
+    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-contrib-less": "~0.11.4",
     "grunt-contrib-requirejs": "~0.4",
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-watch": "~0.6.1",
     "requirejs": "~2.1"
   }
 }
