--- a/composer.json
+++ b/composer.json
@@ -44,9 +44,9 @@
         "php": ">=5.5",
         "symfony/symfony": "~2.7",
         "doctrine/common": "~2.6",
-        "doctrine/dbal": "~2.5",
+        "doctrine/dbal": ">=2.5.4",
         "doctrine/cache": "~1.6",
-        "doctrine/migrations": "~1.3",
+        "doctrine/migrations": "~1.4",
         "smarty/smarty": "3.1.19",
         "incenteev/composer-parameter-handler": "~2.0",
         "monolog/monolog": "~1.6",
