--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ php:
 script: phpunit -c test/phpunit.xml
 
 before_script:
-  - sh -c "mysql -e 'create database IF NOT EXISTS siteforever_test;'"
   - curl -sS https://getcomposer.org/installer | php
   - php composer.phar install --prefer-dist -n
+  - php bin/console --env=test database:create
