Progress 0.8 version. Added codeception integration. Added fixtures commands.

--- a/class/Module/Database/config.yml
+++ b/class/Module/Database/config.yml
@@ -5,8 +5,7 @@ services:
 
     data.manager:
         class: Sfcms\Data\DataManager
-        calls:
-            - [setContainer, ["@service_container"]]
+        lazy:  true
 
     data.scheme.manager:
         class: Sfcms\Data\SchemeManager
