--- a/composer.json
+++ b/composer.json
@@ -43,34 +43,19 @@
     "./",
     "class/"
   ],
-  "require-dev": {
-    "behat/behat": "~3.0",
-    "behat/mink-extension": "~2.0",
-    "behat/mink": "~1.5",
-    "behat/mink-browserkit-driver": "1.1.*",
-    "behat/mink-goutte-driver": "1.0.*",
-    "behat/mink-selenium2-driver": "~1.1",
-    "phpunit/php-invoker": "1.1.*",
-    "phpunit/phpunit": "3.7.*",
-    "phpunit/phpunit-mock-objects": "1.2.*",
-    "phpunit/php-code-coverage": "1.2.*",
-    "phpunit/php-file-iterator": "1.3.*"
-  },
   "require": {
     "php": ">=5.6",
-    "symfony/symfony": "~2.7",
+    "symfony/symfony": "~2.8",
     "symfony/proxy-manager-bridge": "~2.5",
     "doctrine/common": "~2.6",
     "doctrine/dbal": "~2.5",
-    "doctrine/cache": "~1.6",
-    "doctrine/migrations": "~1.3",
+    "doctrine/migrations": "~1.5",
     "symfony/swiftmailer-bundle": "~2.3",
     "symfony/monolog-bundle": "~2.4",
     "symfony-cmf/routing-bundle": "~1.2",
     "sensio/distribution-bundle": "~5.0",
     "sensio/framework-extra-bundle": "~3.0",
     "sensio/generator-bundle": "~2.3",
-    "doctrine/orm": "~2.4",
     "doctrine/doctrine-bundle": "~1.2",
     "doctrine/doctrine-migrations-bundle": "~1.0",
     "noiselabs/smarty-bundle": "~1.3",
@@ -78,20 +63,32 @@
     "incenteev/composer-parameter-handler": "~2.0",
     "monolog/monolog": "~1.6",
     "swiftmailer/swiftmailer": "~5.0",
-    "studio-42/elfinder": "~2.1"
+    "studio-42/elfinder": "~2.1",
+    "cache/cache": "^0.3"
+  },
+  "require-dev": {
+    "codeception/codeception": "~2.2",
+    "flow/jsonpath": "0.3.*",
+    "phpunit/phpunit": "~5.0",
+    "symfony/phpunit-bridge": "~2.7"
   },
   "scripts": {
     "post-install-cmd": [
       "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets"
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+      "php bin/console doctrine:database:create --if-not-exists -n",
+      "php bin/console database:scheme:update --force",
+      "php bin/console fixture:users",
+      "php bin/console fixture:pages"
     ],
     "post-update-cmd": [
       "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
       "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets"
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+      "php bin/console database:scheme:update --force"
     ]
   },
   "config": {
@@ -106,6 +103,7 @@
     "symfony-web-dir": "./",
     "symfony-bin-dir": "bin",
     "symfony-var-dir": "var",
+    "symfony-assets-install": "symlink",
     "incenteev-parameters": {
       "file": "app/config/parameters.yml",
       "dist-file": "app/config/parameters.yml.dist"
